feat(agent): Add poddisruptionbudget permissions to the Agent clusterrole (#968)

--- a/charts/sysdig/templates/clusterrole.yaml
+++ b/charts/sysdig/templates/clusterrole.yaml
@@ -103,6 +103,14 @@ rules:
     - get
     - list
     - watch
+  - apiGroups:
+    - policy
+    resources:
+    - poddisruptionbudgets
+    verbs:
+    - get
+    - list
+    - watch
 {{- if .Values.psp.create  }}
   - apiGroups:
       - "policy"
