--- a/charts/agent/templates/clusterrole.yaml
+++ b/charts/agent/templates/clusterrole.yaml
@@ -103,6 +103,14 @@ rules:
     - get
     - list
     - watch
+  - apiGroups:
+    - policy
+    resources:
+    - poddisruptionbudgets
+    verbs:
+    - get
+    - list
+    - watch
 {{- if and .Values.psp.create (lt (int .Capabilities.KubeVersion.Minor) 25) }}
   - apiGroups:
       - "policy"
