feat(rapid-response): Add ServiceAccount and SecurityContextConstraint for Rapid Response (#1006)
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>

--- a/charts/rapid-response/templates/daemonset.yaml
+++ b/charts/rapid-response/templates/daemonset.yaml
@@ -21,6 +21,8 @@ spec:
     spec:
       {{- if .Values.rapidResponse.existingServiceAccount }}
       serviceAccountName: {{ .Values.rapidResponse.existingServiceAccount }}
+      {{- else }}
+      serviceAccountName: {{ template "rapidResponse.serviceAccountName" .}}
       {{- end }}
       tolerations:
 {{ toYaml .Values.rapidResponse.tolerations | indent 8 }}
