--- a/charts/rapid-response/templates/tests/test-rollout.yaml
+++ b/charts/rapid-response/templates/tests/test-rollout.yaml
@@ -76,7 +76,7 @@ roleRef:
 
 ---
 
-{{- if .Values.tests.serviceAccount.create }}
+{{- if .Values.rapidResponse.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
