--- a/charts/harbor-scanner-sysdig-secure/Chart.yaml
+++ b/charts/harbor-scanner-sysdig-secure/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: harbor-scanner-sysdig-secure
 description: Harbor Scanner for Sysdig Secure
 type: application
-version: 0.3.6
-appVersion: 0.5.0
+version: 0.4.0
+appVersion: 0.6.0
 home: https://github.com/sysdiglabs/harbor-scanner-sysdig-secure
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
 maintainers:
@@ -11,3 +11,5 @@ maintainers:
     email: nestor.salceda@sysdig.com
   - name: airadier
     email: alvaro.iradier@sysdig.com
+  - name: marcuzzuu
+    email: marco.mancuso@sysdig.com
