--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -122,8 +122,8 @@ spec:
               readOnly: true
             - mountPath: /host/run
               name: run-vol
-            - mountPath: /host/var
-              name: var-vol
+            - mountPath: /host/var/run
+              name: varrun-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -184,9 +184,9 @@ spec:
             type: ""
           name: run-vol
         - hostPath:
-            path: /var
+            path: /var/run
             type: ""
-          name: var-vol
+          name: varrun-vol
         {{- if .Values.extraVolumes.volumes }}
 {{ toYaml .Values.extraVolumes.volumes | indent 8 }}
         {{- end }}
