feat(node-analyzer): add extraVolumes to daemonset with nodeAnalyzer.extraVolumes.volumes
Extended Changelog: adds new option `nodeAnalyzer.extraVolumes.volumes`. This allows to define volumes for the nodeAnalyzer daemonset in a cleaner way.
Previously it was necessary to use the option `nodeAnalyzer.imageAnalyzer.extraVolumes.volumes`.

--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -86,6 +86,9 @@ spec:
         {{- with .Values.nodeAnalyzer.imageAnalyzer.extraVolumes.volumes }}
 {{ toYaml . | indent 8 }}
         {{- end }}
+        {{- with .Values.nodeAnalyzer.extraVolumes.volumes }}
+{{ toYaml . | indent 8 }}
+        {{- end }}
       {{- if .Values.nodeAnalyzer.priorityClassName }}
       priorityClassName: "{{ .Values.nodeAnalyzer.priorityClassName }}"
       {{- end }}
