feat(registry-scanner): Add config value for tmp volume size limit

--- a/charts/registry-scanner/templates/configmap.yaml
+++ b/charts/registry-scanner/templates/configmap.yaml
@@ -58,6 +58,7 @@ data:
             cpu: {{ .Values.config.scan.jobs.resources.requests.cpu }}
           limits:
             memory: {{ .Values.config.scan.jobs.resources.limits.memory }}
+        temporaryVolumeSizeLimit: {{ .Values.config.scan.jobs.temporaryVolumeSizeLimit }}
       {{- if .Values.config.scan.inlineScanImage }}
       inlineScanImage: {{ .Values.config.scan.inlineScanImage }}
       {{- end }}
