--- a/charts/registry-scanner/tests/cronjob_test.yaml
+++ b/charts/registry-scanner/tests/cronjob_test.yaml
@@ -18,3 +18,13 @@ tests:
           content:
             name: FOO
             value: bar
+  - it: sets the service account for the jobs
+    asserts:
+    - equal:
+        path: spec.jobTemplate.spec.template.spec.serviceAccountName
+        value: RELEASE-NAME-registry-scanner
+  - it: sets the backoff limit to 0
+    asserts:
+    - equal:
+        path: spec.jobTemplate.spec.backoffLimit
+        value: 0
