--- a/charts/registry-scanner/templates/configmap.yaml
+++ b/charts/registry-scanner/templates/configmap.yaml
@@ -52,6 +52,7 @@ data:
       workers: {{ .Values.config.maxWorkers }}
       jobs:
         ttlSecondsAfterFinished: {{ .Values.config.scan.jobs.ttlSecondsAfterFinished }}
+        serviceAccountName: {{ include "registry-scanner.serviceAccountName" . }}
         resources:
           requests:
             memory: {{ .Values.config.scan.jobs.resources.requests.memory }}
