chore(agent): mount only /var/lib and /var/run in container
Mounting the /var folder, when /var/run is a symlink to /run the link
is resolved inside the container, this not allow to get access to the
host information.

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -224,8 +224,10 @@ spec:
             {{- end }}
             - mountPath: /host/run
               name: run-vol
-            - mountPath: /host/var
-              name: var-vol
+            - mountPath: /host/var/run
+              name: varrun-vol
+            - mountPath: /host/var/lib
+              name: varlib-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -279,9 +281,12 @@ spec:
         - name: run-vol
           hostPath:
             path: /run
-        - name: var-vol
+        - name: varrun-vol
           hostPath:
-            path: /var
+            path: /var/run
+        - name: varlib-vol
+          hostPath:
+            path: /var/lib
         {{- if (and (or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
