--- a/charts/agent/tests/volumes_test.yaml
+++ b/charts/agent/tests/volumes_test.yaml
@@ -1,16 +1,26 @@
 # Restore once https://github.com/sysdiglabs/charts/pull/996 is merged
-#
+
 # suite: Host volumes are available for agent
 # templates:
 #   - templates/daemonset.yaml
 # tests:
-#   - it: Ensure /var host volume is mounted as /host/var in container
+#   - it: Ensure /var/run host volume is mounted as /host/var/run in container
 #     asserts:
 #       - equal:
-#           path: spec.template.spec.containers[*].volumeMounts[?(@.name == "var-vol")].mountPath
-#           value: /host/var
+#           path: spec.template.spec.containers[*].volumeMounts[?(@.name == "varrun-vol")].mountPath
+#           value: /host/var/run
 #         template: templates/daemonset.yaml
 #       - equal:
-#           path: spec.template.spec.volumes[?(@.name == "var-vol")].hostPath.path
-#           value: /var
+#           path: spec.template.spec.volumes[?(@.name == "varrun-vol")].hostPath.path
+#           value: /var/run
+#         template: templates/daemonset.yaml
+#   - it: Ensure /var/lib host volume is mounted as /host/var/lib in container
+#     asserts:
+#       - equal:
+#           path: spec.template.spec.containers[*].volumeMounts[?(@.name == "varlib-vol")].mountPath
+#           value: /host/var/lib
+#         template: templates/daemonset.yaml
+#       - equal:
+#           path: spec.template.spec.volumes[?(@.name == "varlib-vol")].hostPath.path
+#           value: /var/lib
 #         template: templates/daemonset.yaml
