--- a/charts/sysdig/templates/daemonset.yaml
+++ b/charts/sysdig/templates/daemonset.yaml
@@ -222,8 +222,10 @@ spec:
             {{- end }}
             - mountPath: /host/run
               name: run-vol
-            - mountPath: /host/var
-              name: var-vol
+            - mountPath: /host/var/run
+              name: varrun-vol
+            - mountPath: /host/var/lib
+              name: varlib-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -281,9 +283,12 @@ spec:
         - name: run-vol
           hostPath:
             path: /run
-        - name: var-vol
+        - name: varrun-vol
           hostPath:
-            path: /var
+            path: /var/run
+        - name: varlib-vol
+          hostPath:
+            path: /var/lib
         {{- if (and (or .Values.ebpf.enabled .Values.gke.autopilot) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
