feat(agent): Include /var/libs host volume mount (#1009)
Co-authored-by: Marco Vito Moscaritolo <mavimo@gmail.com>

--- a/charts/sysdig/templates/daemonset.yaml
+++ b/charts/sysdig/templates/daemonset.yaml
@@ -224,6 +224,8 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            - mountPath: /host/var/lib
+              name: varlib-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -284,6 +286,9 @@ spec:
         - name: varrun-vol
           hostPath:
             path: /var/run
+        - name: varlib-vol
+          hostPath:
+            path: /var/lib
         {{- if (and (or .Values.ebpf.enabled .Values.gke.autopilot) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
