--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -226,6 +226,8 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            - mountPath: /host/var/lib
+              name: varlib-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -282,6 +284,9 @@ spec:
         - name: varrun-vol
           hostPath:
             path: /var/run
+        - name: varlib-vol
+          hostPath:
+            path: /var/lib
         {{- if (and (or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
