--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -124,6 +124,8 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            - mountPath: /host/var/lib
+              name: varlib-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -187,6 +189,10 @@ spec:
             path: /var/run
             type: ""
           name: varrun-vol
+        - hostPath:
+            path: /var/lib
+            type: ""
+          name: varlib-vol
         {{- if .Values.extraVolumes.volumes }}
 {{ toYaml .Values.extraVolumes.volumes | indent 8 }}
         {{- end }}
