--- a/charts/agent/tests/secure_enable_test.yaml
+++ b/charts/agent/tests/secure_enable_test.yaml
@@ -99,7 +99,7 @@ tests:
           path: data.dragent\.yaml
           pattern: 'commandlines_capture:\n\ {2}enabled:\ false\ndrift_killer:\n\ {2}enabled:\ false\nfalcobaseline:\n {2}enabled:\ false\nmemdump:\n\ {2}enabled:\ false\nnetwork_topology:\n\ {2}enabled:\ false\nsecure_audit_streams:\n\ {2}enabled:\ false'
 
-  - it: Test monitor.enabled when specifying secure_light mode
+  - it: Test secure.enabled=false when specifying secure_light mode
     set:
       secure:
         enabled: false
@@ -111,7 +111,7 @@ tests:
       - failedTemplate:
           errorMessage: 'Set secure.enabled=true when specifying sysdig.settings.feature.mode is `secure` or `secure_light`'
 
-  - it: Test monitor.enabled when specifying secure mode
+  - it: Test secure.enabled=false when specifying secure mode
     set:
       secure:
         enabled: false
