--- a/charts/admission-controller/templates/scanner/rolebinding.yaml
+++ b/charts/admission-controller/templates/scanner/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.scanner.psp.create  }}
+{{- if and .Values.scanner.psp.create (include "admissionController.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 25)) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
