--- a/charts/agent/templates/clusterrole.yaml
+++ b/charts/agent/templates/clusterrole.yaml
@@ -111,7 +111,7 @@ rules:
     - get
     - list
     - watch
-{{- if and .Values.psp.create (lt (int .Capabilities.KubeVersion.Minor) 25) }}
+{{- if and .Values.psp.create (include "agent.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 25)) }}
   - apiGroups:
       - "policy"
     resources:
