--- a/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
@@ -111,7 +111,7 @@ rules:
     - create
     - delete
 {{- end }}
-{{- if and .Values.psp.create (lt (int .Capabilities.KubeVersion.Minor) 25) }}
+{{- if and .Values.psp.create (include "nodeAnalyzer.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 25)) }}
 - apiGroups:
     - "policy"
   resources:
