--- a/charts/sysdig/tests/psp_test.yaml
+++ b/charts/sysdig/tests/psp_test.yaml
@@ -22,3 +22,23 @@ tests:
     asserts:
       - hasDocuments:
           count: 0
+
+  - it: Ensure PSPs are created on k8s <1.25 with '+' character in minor version
+    capabilities:
+      majorVersion: 1
+      minorVersion: "24+"
+    set:
+      psp:
+        create: true
+    asserts:
+      - containsDocument:
+          apiVersion: policy/v1beta1
+          kind: PodSecurityPolicy
+
+  - it: Ensure PSP is not created on k8s >=1.25 with '+' character in minor version
+    capabilities:
+      majorVersion: 1
+      minorVersion: "25+"
+    asserts:
+      - hasDocuments:
+          count: 0
