--- a/charts/agent/tests/monitor_enable_test.yaml
+++ b/charts/agent/tests/monitor_enable_test.yaml
@@ -63,6 +63,22 @@ tests:
             when running the Agent in secure or secure_light modes.
     template: templates/NOTES.txt
 
+  - it: Test monitor.enabled=false when specifying secure_light mode
+    set:
+      monitor:
+        enabled: false
+      sysdig:
+        settings:
+          feature:
+            mode: secure_light
+    asserts:
+      - notMatchRegexRaw:
+          pattern: |-
+            The monitor.enabled parameter is true while using sysdig.settings.feature.mode to put the Agent into either
+            secure or secure_light mode. Please set monitor.enabled=false to ensure all Sysdig Monitor components are disabled
+            when running the Agent in secure or secure_light modes.
+    template: templates/NOTES.txt
+
   - it: Test monitor.enabled when specifying secure mode
     set:
       monitor:
@@ -73,6 +89,22 @@ tests:
             mode: secure
     asserts:
       - matchRegexRaw:
+          pattern: |-
+            The monitor.enabled parameter is true while using sysdig.settings.feature.mode to put the Agent into either
+            secure or secure_light mode. Please set monitor.enabled=false to ensure all Sysdig Monitor components are disabled
+            when running the Agent in secure or secure_light modes.
+    template: templates/NOTES.txt
+
+  - it: Test monitor.enabled=false when specifying secure mode
+    set:
+      monitor:
+        enabled: false
+      sysdig:
+        settings:
+          feature:
+            mode: secure
+    asserts:
+      - notMatchRegexRaw:
           pattern: |-
             The monitor.enabled parameter is true while using sysdig.settings.feature.mode to put the Agent into either
             secure or secure_light mode. Please set monitor.enabled=false to ensure all Sysdig Monitor components are disabled
