--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -225,8 +225,10 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            {{- if not (include "agent.gke.autopilot" .) }}
             - mountPath: /host/var/lib
               name: varlib-vol
+            {{- end }}
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -283,9 +285,11 @@ spec:
         - name: varrun-vol
           hostPath:
             path: /var/run
+        {{- if not (include "agent.gke.autopilot" .) }}
         - name: varlib-vol
           hostPath:
             path: /var/lib
+        {{- end }}
         {{- if (and (or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
