--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -123,8 +123,10 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            {{- if not (include "agent.gke.autopilot" .) }}
             - mountPath: /host/var/lib
               name: varlib-vol
+            {{- end}}
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -188,10 +190,12 @@ spec:
             path: /var/run
             type: ""
           name: varrun-vol
+        {{- if not (include "agent.gke.autopilot" .) }}
         - hostPath:
             path: /var/lib
             type: ""
           name: varlib-vol
+        {{- end }}
         {{- if .Values.extraVolumes.volumes }}
 {{ toYaml .Values.extraVolumes.volumes | indent 8 }}
         {{- end }}
