--- a/charts/sysdig-deploy/tests/notes_test.yaml
+++ b/charts/sysdig-deploy/tests/notes_test.yaml
@@ -171,3 +171,41 @@ tests:
       - notMatchRegexRaw:
           pattern: |-
             The "drift_killer" feature in agent is not supported when running on GKE Autopilot.
+
+  - it: Test warning printed for GKE Autopilot environments without PriorityClass creation or existing name specified
+    set:
+      agent:
+        gke:
+          autopilot: true
+        slim:
+          enabled: false
+    asserts:
+      - matchRegexRaw:
+          pattern: |-
+            A PriorityClass is recommended for GKE Autopilot environments. Please set agent.gke.createPriorityClass=true or provide the name of an existing PriorityClass by using the agent.priorityClassName parameter.
+
+  - it: Test warning not printed for GKE Autopilot environments when PriorityClass creation specified
+    set:
+      agent:
+        gke:
+          autopilot: true
+          createPriorityClass: true
+        slim:
+          enabled: false
+    asserts:
+      - notMatchRegexRaw:
+          pattern: |-
+            A PriorityClass is recommended for GKE Autopilot environments. Please set agent.gke.createPriorityClass=true or provide the name of an existing PriorityClass by using the agent.priorityClassName parameter.
+
+  - it: Test warning not printed for GKE Autopilot environments when priorityClassName is specified
+    set:
+      agent:
+        gke:
+          autopilot: true
+        priorityClassName: my-pc-name
+        slim:
+          enabled: false
+    asserts:
+      - notMatchRegexRaw:
+          pattern: |-
+            A PriorityClass is recommended for GKE Autopilot environments. Please set agent.gke.createPriorityClass=true or provide the name of an existing PriorityClass by using the agent.priorityClassName parameter.
