--- a/charts/agent/templates/gkeautopilotpriorityclass.yaml
+++ b/charts/agent/templates/gkeautopilotpriorityclass.yaml
@@ -1,9 +1,4 @@
-{{- if and .Values.gke.autopilot (not .Values.slim.enabled) }}
-
-
-{{- if and (not .Values.gke.createPriorityClass) (not .Values.priorityClassName) }}
-  {{- fail "A PriorityClass is required for GKE Autopilot environments. Please set gke.createPriorityClass=true or provide the name of an existing PriorityClass by using the priorityClassName parameter" }}
-{{- end }}
+{{- if and (include "agent.gke.autopilot" .) (not .Values.slim.enabled) .Values.gke.createPriorityClass }}
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
 metadata:
